fix height bug on mobile

--- a/src/assets/custom.css
+++ b/src/assets/custom.css
@@ -103,6 +103,12 @@ body {
     .show-on-mobile {
         display: block !important;
     }
+    .fs-28 {
+        font-size: 20px !important;
+    }
+    .fs-12 {
+        font-size: 10px !important;
+    }
 }
 
 /* Reset */
